# bibli

./: LICENSE  README.md  env.bash
jericho/: README.md  env.bash  pyproject.toml
jericho/app/: .gitignore  .pylintrc  main.py  pyproject.toml
jericho/app/google_books_client/: api.py
jericho/app/olclient/: __init__.py  common.py  config.py  openlibrary.py  utils.py
jericho/app/olclient/entity_helpers/: work.py
jericho/app/olclient/helper_classes/: author_results.py  results.py
jericho/app/resources/: exceptions.py  strings.py
jericho/app/src/: config.py  conftest.py  database.py
jericho/app/src/auth/: auth0.py  middleware.py  user.py
jericho/app/src/db/alembic/: env.py
jericho/app/src/db/alembic/versions/: 1d5901a47aba_first_publication_date.py  3e9f130b738a_initial_migration.py  4789f90fb895_collection_user_link.py  5b5ceb7f8572_init.py  731dec6bcf00_init.py  7bf135e1e044_author.py  c5a0006d1bef_user_bio.py
jericho/app/src/db/schema/: __init__.py  activity.py  books.py  collections.py  filter.py  reviews.py  users.py
jericho/app/src/domain/books/: book.py  schemas.py  service.py  translate.py
jericho/app/src/domain/collections/: schemas.py  service.py  utils.py
jericho/app/src/domain/reviews/: schemas.py  service.py  utils.py
jericho/app/src/domain/service/: __init__.py  activity.py  archive.py  books.py  collections.py  reviews.py  users.py
jericho/app/src/domain/tests/: test_books.py  test_reviews.py  test_users.py
jericho/app/src/domain/users/: schemas.py  service.py
jericho/app/src/domain/utils/: __init__.py  constants.py  ratings.py  translate.py
jericho/app/src/routers/: activity.py  authorization.py  books.py  collections.py  internal.py  reviews.py  users.py
jericho/app/src/tests/: test_routers.py
jericho/sql/: book.py  config.py  database.py
sasquatch/: .gitignore  App.tsx  app.json  env.bash  package-lock.json  package.json
sasquatch/android/: settings.gradle
sasquatch/android/app/: build.gradle
sasquatch/ios/: Podfile
sasquatch/ios/sasquatch/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
sasquatch/ios/sasquatch.xcodeproj/: project.pbxproj
sasquatch/ios/sasquatch.xcworkspace/: contents.xcworkspacedata
sasquatch/ios/sasquatchTests/: sasquatchTests.m
sasquatch/src/: index.tsx
sasquatch/src/api/: index.tsx
sasquatch/src/components/Button/: Button.tsx
sasquatch/src/config/: index.tsx
sasquatch/src/context/: api.tsx  index.tsx  user.tsx
sasquatch/src/screens/: BioScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  UsernameScreen.tsx  index.tsx
(+60 files in other folders)
