[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Arden Chew <achew@grailbio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
